force-app/main/default/objects/Worker__c/Worker__c.object-meta.xml
<CustomObject>
    <label>Worker</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>