force-app/main/default/objects/Worker__c/fields/Latest_of_Travel_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Latest_of_Travel_Expenses__c</fullName>
    <label>Latest of Travel Expenses</label>
    <summarizedField>Expence__c.Date__c</summarizedField>
    <summaryForeignKey>Expence__c.Worker_Name__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>