force-app/main/default/objects/Worker__c/fields/Total_of_all_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Total_of_all_Expenses__c</fullName>
    <label>Total of all Expenses</label>
    <summarizedField>Expence__c.Amount__c</summarizedField>
    <summaryForeignKey>Expence__c.Worker_Name__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>